Bleep. Bloop. I am a bot.

--- a/Generating-sources.html
+++ b/Generating-sources.html
@@ -252,7 +252,7 @@ and library dependency, especially if there are many generated headers:</p>
 )
 </code></pre>
 <p>See <a href="Dependencies.html#declaring-your-own">dependencies</a>, and
-<a href="Reference-manual.html#decalre_dependency">reference</a> for more information.</p>
+<a href="Reference-manual.html#declare_dependency">reference</a> for more information.</p>
 <h2 id="using-generator">Using generator()</h2>
 <p>Generators are similar to custom targets, except that we define a
 <em>generator</em>, which defines how to transform an input file into one or
