--- a/Users.html
+++ b/Users.html
@@ -255,10 +255,15 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <a href="https://github.com/open-source-parsers/jsoncpp">JsonCpp</a>, a C++ library for interacting with JSON</li>
 <li>
 <a href="https://gitlab.gnome.org/GNOME/json-glib">Json-glib</a>, GLib-based JSON manipulation library</li>
+<li><a href="https://github.com/kiwix/kiwix-lib">Kiwix libraries</a></li>
+<li>
+<a href="https://gitlab.labs.nic.cz/knot/knot-resolver">Knot Resolver</a>, Full caching DNS resolver implementation</li>
 <li>
 <a href="https://github.com/att/ast">Ksh</a>, a Korn Shell</li>
 <li>
 <a href="https://github.com/LeelaChessZero/lc0">Lc0</a>, LeelaChessZero is a UCI-compliant chess engine designed to play chess via neural network</li>
+<li>
+<a href="https://git.linuxtv.org/libcamera.git/">libcamera</a>, a library to handle complex cameras on Linux, ChromeOS and Android</li>
 <li>
 <a href="https://cgit.freedesktop.org/drm/libdrm/">Libdrm</a>, a library for abstracting DRM kernel interfaces</li>
 <li>
@@ -281,7 +286,6 @@ format files</li>
 <a href="https://github.com/intel/libva">Libva</a>, an implementation for the VA (VIdeo Acceleration) API</li>
 <li>
 <a href="https://github.com/openzim/libzim">Libzim</a>, the reference implementation for the ZIM file format</li>
-<li><a href="https://github.com/kiwix/kiwix-lib">Kiwix libraries</a></li>
 <li>
 <a href="https://github.com/fabiocolacio/Marker">Marker</a>, a GTK-3 markdown editor</li>
 <li>
