--- a/Configuring-a-build-directory.html
+++ b/Configuring-a-build-directory.html
@@ -184,7 +184,7 @@ Core options:
   Option          Current Value Possible Values                                          Description
   ------          ------------- ---------------                                          -----------
   auto_features   auto          [enabled, disabled, auto]                                Override value of all 'auto' features
-  backend         ninja         [ninja, vs, vs2010, vs2015, vs2017, xcode]               Backend to use
+  backend         ninja         [ninja, vs, vs2010, vs2015, vs2017, vs2019, xcode]       Backend to use
   buildtype       release       [plain, debug, debugoptimized, release, minsize, custom] Build type to use
   debug           false         [true, false]                                            Debug
   default_library shared        [shared, static, both]                                   Default library type
@@ -220,7 +220,7 @@ Compiler options:
   ------        ------------- ---------------                                                                                               -----------
   c_args        []                                                                                                                          Extra arguments passed to the C compiler
   c_link_args   []                                                                                                                          Extra arguments passed to the C linker
-  c_std         c99           [none, c89, c99, c11, gnu89, gnu99, gnu11]                                                                    C language standard to use
+  c_std         c99           [none, c89, c99, c11, c17, c18, gnu89, gnu99, gnu11, gnu17, gnu18]                                                                    C language standard to use
   cpp_args      []                                                                                                                          Extra arguments passed to the C++ compiler
   cpp_debugstl  false         [true, false]                                                                                                 STL debug mode
   cpp_link_args []                                                                                                                          Extra arguments passed to the C++ linker
