--- a/fallback-wraptool.html
+++ b/fallback-wraptool.html
@@ -167,21 +167,29 @@ $('body').removeClass('no-script');
 	<div id="main">
 				    <div id="page-description" data-hotdoc-source="fallback-wraptool.md" data-hotdoc-role="main">
         <h1 id="in-case-of-emergency">In case of emergency</h1>
-<p>In case wraptool is down we have created a backup script that you can use to download wraps directly from the GitHub repos. It is not as slick and may have bugs but at least it will allow you to use wraps.</p>
+<p>In case wraptool is down we have created a backup script that you can
+use to download wraps directly from the GitHub repos. It is not as
+slick and may have bugs but at least it will allow you to use wraps.</p>
 <h2 id="using-it">Using it</h2>
-<p>Currently the emergency tool is only in Meson trunk so you need a git checkout to use it. It also does not on releases older than 0.32.0 because they had a bug. (A workaround for older versions is to delete existing <code>foobar.wrap</code> files if you have them.)</p>
 <p>To list all available wraps:</p>
 <pre><code>ghwt.py list
 </code></pre>
-<p>To install a wrap, go to your source root, make sure that the <code>subprojects</code> directory exists and run this command:</p>
+<p>To install a wrap, go to your source root, make sure that the
+<code>subprojects</code> directory exists and run this command:</p>
 <pre><code>ghwt.py install &lt;projectname&gt;
 </code></pre>
-<p>This will stage the subproject ready to use. If you have multiple subprojects you need to download them all manually.</p>
+<p>This will stage the subproject ready to use. If you have multiple
+subprojects you need to download them all manually.</p>
+<p><em>Note</em> The tool was added in 0.32.0, for versions older than that you
+need to delete the <code>foo.wrap</code> file to work around this issue.</p>
 <h2 id="how-to-upgrade-an-existing-dirfix-broken-stateany-other-problem">How to upgrade an existing dir/fix broken state/any other problem</h2>
 <p>Nuke the contents of <code>subprojects</code> and start again.</p>
 <h2 id="known-issues">Known issues</h2>
-<p>Some repositories show up in the list but are not installable. They would not show up in the real WrapDB because they are works in progress.</p>
-<p>GitHub web API limits the amount of queries you can do to 60/hour. If you exceed that you need to wait for the timer to reset.</p>
+<p>Some repositories show up in the list but are not installable. They
+would not show up in the real WrapDB because they are works in
+progress.</p>
+<p>GitHub web API limits the amount of queries you can do to 60/hour. If
+you exceed that you need to wait for the timer to reset.</p>
 
     </div>
         
