Bleep. Bloop. I am a bot.

--- a/Creating-releases.html
+++ b/Creating-releases.html
@@ -178,7 +178,8 @@ single command:</p>
 <p>This creates a file called <code>projectname-version.tar.xz</code> in the build
 tree subdirectory <code>meson-dist</code>. This archive contains the full
 contents of the latest commit in revision control including all the
-submodules. All revision control metadata is removed. Meson then takes
+submodules (recursively). All revision control metadata is removed.
+Meson then takes
 this archive and tests that it works by doing a full compile + test +
 install cycle. If all these pass, Meson will then create a SHA-256
 checksum file next to the archive.</p>
