--- a/Syntax.html
+++ b/Syntax.html
@@ -257,6 +257,8 @@ single quote do it like this:</p>
 <code>\N{name}</code> Character named name in Unicode database</li>
 </ul>
 <p>As in python and C, up to three octal digits are accepted in <code>\ooo</code>.</p>
+<p>Unrecognized escape sequences are left in the string unchanged, i.e., the
+backslash is left in the string.</p>
 <h4 id="string-concatenation">String concatenation</h4>
 <p>Strings can be concatenated to form a new string using the <code>+</code> symbol.</p>
 <pre><code class="language-meson">str1 = 'abc'
