--- a/i18n-module.html
+++ b/i18n-module.html
@@ -224,6 +224,9 @@ also <code>i18n.gettext()</code>)</li>
 <li>
 <code>type</code>: type of file, valid options are <code>'xml'</code> (default) and <code>'desktop'</code>
 </li>
+<li>
+<code>args</code>: (<em>Added 0.51.0</em>) list of extra arguments to pass to <code>msgfmt</code>
+</li>
 </ul>
 <p><em>Added 0.37.0</em></p>
 
