--- a/Users.html
+++ b/Users.html
@@ -230,6 +230,8 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <li>
 <a href="https://gitlab.gnome.org/GNOME/gnome-usage">GNOME Usage</a>, a GNOME application for visualizing system resources</li>
 <li>
+<a href="https://github.com/fribidi/fribidi">GNU FriBidi</a>, the open source implementation of the Unicode Bidirectional Algorithm</li>
+<li>
 <a href="https://ebassi.github.io/graphene/">Graphene</a>, a thin type library for graphics</li>
 <li>
 <a href="https://git.gnome.org/browse/grilo">Grilo</a> and <a href="https://git.gnome.org/browse/grilo-plugins">Grilo plugins</a>, the Grilo multimedia framework</li>
@@ -249,6 +251,8 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <a href="https://cgit.freedesktop.org/xorg/app/intel-gpu-tools/">IGT</a>, Linux kernel graphics driver test suite</li>
 <li>
 <a href="https://github.com/tbodt/ish">iSH</a>, Linux shell for iOS</li>
+<li>
+<a href="https://github.com/janet-lang/janet">Janet</a>, a functional and imperative programming language and bytecode interpreter</li>
 <li>
 <a href="https://github.com/nlohmann/json">json</a>, JSON for Modern C++</li>
 <li>
@@ -282,6 +286,8 @@ lookup based on OpenStreetMap data</li>
 <li>
 <a href="https://gitlab.com/randy408/libspng">libspng</a>, a C library for reading and writing Portable Network Graphics (PNG)
 format files</li>
+<li>
+<a href="https://github.com/andlabs/libui">libui</a>, a simple and portable (but not inflexible) GUI library in C that uses the native GUI technologies of each platform it supports</li>
 <li>
 <a href="https://github.com/intel/libva">Libva</a>, an implementation for the VA (VIdeo Acceleration) API</li>
 <li>
